@@ -21,9 +21,7 @@ import static com.yelp.nrtsearch.server.grpc.LuceneServerTest.checkHits;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
-import com.amazonaws.auth.AnonymousAWSCredentials;
 import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.AmazonS3Client;
 import com.google.common.collect.ImmutableList;
 import com.yelp.nrtsearch.server.LuceneServerTestConfigurationFactory;
 import com.yelp.nrtsearch.server.backup.Archiver;
@@ -31,17 +29,16 @@ import com.yelp.nrtsearch.server.backup.ArchiverImpl;
 import com.yelp.nrtsearch.server.backup.Tar;
 import com.yelp.nrtsearch.server.backup.TarImpl;
 import com.yelp.nrtsearch.server.config.LuceneServerConfiguration;
-import com.yelp.nrtsearch.server.luceneserver.GlobalState;
-import io.findify.s3mock.S3Mock;
+import com.yelp.nrtsearch.test_utils.AmazonS3Provider;
 import io.grpc.StatusRuntimeException;
 import io.grpc.testing.GrpcCleanupRule;
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.iq80.leveldb.util.FileUtils;
@@ -54,9 +51,7 @@ import org.junit.rules.TemporaryFolder;
 public class BackupRestoreIndexRequestHandlerTest {
   private final String BUCKET_NAME = "archiver-unittest";
   private Archiver archiver;
-  private S3Mock api;
   private AmazonS3 s3;
-  private Path s3Directory;
   private Path archiverDirectory;
 
   @Rule public final TemporaryFolder folder = new TemporaryFolder();
@@ -67,17 +62,14 @@ public class BackupRestoreIndexRequestHandlerTest {
    */
   @Rule public final GrpcCleanupRule grpcCleanup = new GrpcCleanupRule();
 
+  @Rule public final AmazonS3Provider s3Provider = new AmazonS3Provider(BUCKET_NAME);
+
   private GrpcServer grpcServer;
 
   @Before
   public void setup() throws IOException {
-    s3Directory = folder.newFolder("s3").toPath();
     archiverDirectory = folder.newFolder("archiver").toPath();
-    api = S3Mock.create(8011, s3Directory.toAbsolutePath().toString());
-    api.start();
-    s3 = new AmazonS3Client(new AnonymousAWSCredentials());
-    s3.setEndpoint("http://127.0.0.1:8011");
-    s3.createBucket(BUCKET_NAME);
+    s3 = s3Provider.getAmazonS3();
     archiver =
         new ArchiverImpl(s3, BUCKET_NAME, archiverDirectory, new TarImpl(Tar.CompressionMode.LZ4));
     grpcServer = setUpGrpcServer();
@@ -86,22 +78,19 @@ public class BackupRestoreIndexRequestHandlerTest {
   private GrpcServer setUpGrpcServer() throws IOException {
     LuceneServerConfiguration luceneServerConfiguration =
         LuceneServerTestConfigurationFactory.getConfig(Mode.STANDALONE, folder.getRoot());
-    GlobalState globalState = GlobalState.createState(luceneServerConfiguration);
     return new GrpcServer(
         grpcCleanup,
         luceneServerConfiguration,
         folder,
-        false,
-        globalState,
+        null,
         luceneServerConfiguration.getIndexDir(),
         "test_index",
-        globalState.getPort(),
+        luceneServerConfiguration.getPort(),
         archiver);
   }
 
   @After
   public void teardown() throws IOException {
-    api.shutdown();
     tearDownGrpcServer();
   }
 
@@ -139,6 +128,10 @@ public class BackupRestoreIndexRequestHandlerTest {
     // ../test_index/shard0/index
     expected.remove("write.lock");
     expected.remove("write.lock");
+    // The empty index is committed on first start, resulting in segments file that is not in the
+    // latest index version
+    expected.remove("segments_1");
+
     assertEquals(expected, actual);
   }
 
@@ -181,7 +174,7 @@ public class BackupRestoreIndexRequestHandlerTest {
     try {
       restartIndexWithRestoreAndVerify(false, false);
     } catch (StatusRuntimeException e) {
-      assertTrue(e.getMessage().contains("java.nio.file.DirectoryNotEmptyException"));
+      assertTrue(e.getMessage().contains("Cannot restore, directory has index data file:"));
       throw e;
     }
   }
@@ -350,10 +343,19 @@ public class BackupRestoreIndexRequestHandlerTest {
   }
 
   private void deleteIndexAndMetadata() throws IOException {
-    for (Path path :
-        Arrays.asList(
-            grpcServer.getGlobalState().getStateDir(), Paths.get(grpcServer.getIndexDir()))) {
-      rmDir(path);
+    try (DirectoryStream<Path> stream =
+        Files.newDirectoryStream(Path.of(grpcServer.getIndexDir()))) {
+      for (Path path : stream) {
+        try (DirectoryStream<Path> indexStream = Files.newDirectoryStream(path)) {
+          for (Path indexPath : indexStream) {
+            if (Files.isDirectory(indexPath)) {
+              rmDir(indexPath);
+            } else {
+              Files.delete(indexPath);
+            }
+          }
+        }
+      }
     }
   }
 
